# microservices

./: .gitignore  docker-compose.yml  makefile
.devcontainer/: dev.Dockerfile  devcontainer.json
fallback/: .dockerignore  Dockerfile  main.py  pyproject.toml
fallback/config/: settings.py
fallback/fallback/config/: settings.py
micro1/: .dockerignore  Dockerfile  main.py  pyproject.toml
micro1/config/: settings.py
micro2/: .dockerignore  Dockerfile  main.py  pyproject.toml
micro2/config/: settings.py
micro2/micro2/: __init__.py
web/: Dockerfile
web/templates/: default.conf.template
